<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_cadastro"
    tools:context=".RecuperacaoSenhaActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/quicksand_light"
                android:text="@string/meu"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/logo_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/quicksand_light"
                android:text="@string/controle"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/logo_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recupearacao_senha"
            android:textColor="@color/white"
            android:textSize="@dimen/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <EditText
            android:id="@+id/recuperacaoSenhaEditTextRecuperacaoSenha"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_plain_text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_plain_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_plain_text_start"
            android:paddingEnd="@dimen/padding_plain_text_end"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:autofillHints="" />

        <Button
            android:id="@+id/recuperarSehaButtonRecupecaoSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:text="@string/recuperar_senha"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recuperacaoSenhaEditTextRecuperacaoSenha" />

        <ProgressBar
            android:id="@+id/progressBarRecuperacaoSenha"
            style="@style/ProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/recuperarSehaButtonRecupecaoSenha"
            app:layout_constraintEnd_toEndOf="@+id/recuperarSehaButtonRecupecaoSenha"
            app:layout_constraintStart_toStartOf="@+id/recuperarSehaButtonRecupecaoSenha"
            app:layout_constraintTop_toTopOf="@+id/recuperarSehaButtonRecupecaoSenha" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>